fix issues with search field position on small seen in issue #327

--- a/assets/sass/layout/brand.scss
+++ b/assets/sass/layout/brand.scss
@@ -67,6 +67,9 @@ The logo is a CD element. Its use is mandatory, and its representation may not b
     @media only screen and (max-width: $screen-md-max) {
       font-size: 0.85em;
     }
+    @media only screen and (max-width: $screen-sm-max) {
+      max-width: 210px;
+    }
     line-height: 1.3;
     margin: 0;
     padding-left: 2.5em;
